# codemesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  test_e2e.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
codemesh/: __init__.py  __main__.py  indexer.py  querier.py  types.py
codemesh/cli/: __init__.py  init.py  install_cmd.py  main.py
codemesh/context/: __init__.py  builder.py
codemesh/db/: __init__.py  connection.py  queries.py  schema.py
codemesh/embedding/: __init__.py  daemon.py  model.py  store.py
codemesh/extraction/: __init__.py  orchestrator.py
codemesh/extraction/languages/: __init__.py  c_family.py  go.py  java.py  python.py  rust.py  swift.py  typescript.py
codemesh/graph/: __init__.py  query_manager.py  traverser.py
codemesh/mcp/: __init__.py  server.py  tools.py
codemesh/resolution/: __init__.py  import_resolver.py  name_matcher.py  resolver.py
codemesh/resolution/frameworks/: __init__.py  django.py  fastapi.py
codemesh/retrieval/: __init__.py  classifier.py
codemesh/search/: __init__.py  parser.py
codemesh/sync/: __init__.py  watcher.py
codemesh/viz/: embedding_projector.py  graph_builder.py  server.py
codemesh/viz/templates/: index.html
docs/benchmarks/: agent_benchmark_results.json  run_agent_benchmark.py  run_agentmemory_benchmark.sh
tests/: __init__.py  conftest.py  test_adversarial.py  test_benchmark_repoqa.py  test_embedding_e2e.py  test_extraction.py  test_integration.py  test_llm_judge.py  test_performance.py  test_viz.py
